--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 KGOTHATSO COLLEN MOHLALA
 
 =======================================================================================
-You can run the framework by doing Clean install, running the feature file, or running the Test Runner class.
-The test results should be save on ExecutionReport and the screenshots saved under screenshots.
-
+- You can run the framework by doing Clean install, running the feature file, or running the Test Runner class.
+- The test results should be save on ExecutionReport and the screenshots saved under screenshots.
+- Before running the framework, please change the description
